--- a/CSS_CopyWriting/Basic1/CSS/style.css
+++ b/CSS_CopyWriting/Basic1/CSS/style.css
@@ -111,9 +111,13 @@ li{
     width: 32%;
 }
 
-.img-article > li > img{
+.image-link > img{
     width: 640px;
-    height: 250px;;
+    height: 250px;
+}
+
+.image-link > img:hover{
+    opacity: 0.7;
 }
 
 footer{
